# shushing-face

./: .editorconfig  .gitignore  .prettierignore  package-lock.json  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  config.rs  crypto.rs  error.rs  event.rs  fs.rs  lib.rs  main.rs  storage.rs  task.rs  tasks.rs  util.rs
src/lib/: AddTaskForm.svelte  App.svelte  ChangePasswordForm.svelte  EditTaskForm.svelte  Header.svelte  NewTaskForm.svelte  PasswordForm.svelte  Settings.svelte  TaskList.svelte  Tasks.svelte  UnlockForm.svelte  config.ts  constant.ts  event.ts  page.ts  types.ts
src/lib/component/: AddTaskButton.svelte  AddTaskForm.svelte  AutoLock.svelte  ChangePasswordForm.svelte  ChangeSettingsForm.svelte  ConfirmDialog.svelte  EditTaskForm.svelte  Header.svelte  Icon.svelte  Logo.svelte  LogoWithText.svelte  PasswordInput.svelte  Settings.svelte  TaskForm.svelte  TaskItem.svelte  TaskList.svelte  UnlockForm.svelte
src/lib/model/: config.ts  constant.ts  date.test.ts  date.ts  event.test.ts  event.ts  index.ts  task.ts
src/lib/page/: ChangePasswordPage.svelte  ChangeSettingsPage.svelte  LoadingPage.svelte  Tasks.svelte  TasksPage.svelte  UnlockPage.svelte
src/routes/: +page.svelte
